force-app/main/default/objects/Churn_Risk_Alert__e/Churn_Risk_Alert__e.object-meta.xml
<CustomObject>
    <label>Churn Risk Alert</label>
    <pluralLabel>Churn Risk Alerts</pluralLabel>
</CustomObject>