force-app/main/default/objects/Churn_Risk_Alert__e/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>