force-app/main/default/objects/Churn_Risk_Alert__e/fields/New_Risk__c.field-meta.xml
<CustomField>
    <fullName>New_Risk__c</fullName>
    <label>New Risk</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>