force-app/main/default/objects/Churn_Risk_Alert__e/fields/Previous_Risk__c.field-meta.xml
<CustomField>
    <fullName>Previous_Risk__c</fullName>
    <label>Previous Risk</label>
    <length>20</length>
    <type>Text</type>
</CustomField>